remove previous content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>CSS Presentation</title>
 		<link rel="stylesheet" href="./styles/normalize.css" />
 		<link rel="stylesheet" href="./styles/global.css" />
-		<link rel="stylesheet" href="./styles/sections.css" />
+		<!-- link rel="stylesheet" href="./styles/sections.css" /-->
 		<link rel="icon" href="./favicon.png" />
 		<meta name="description" content="Presentation about CSS rules for gradients, shadows, transitions, transformations and animations" />
 	</head>
@@ -17,9 +17,8 @@
 		<nav>
 			<input type="checkbox" id="menuToggle" />
 			<label for="menuToggle" id="menuButton"></label>
-			<h4>CSS features</h4>
-			<ul>
-				<!-- navigation menu populated by initNav() -->
+			<h4></h4>
+			<ul>			
 			</ul>
 		</nav>
 
